Successful requests with Python
-Able to make successful POST requests.
-Using flask to connect Python to the front-end

--- a/Simple On-Off Switch/Helen/templates/simple_switch.html
+++ b/Simple On-Off Switch/Helen/templates/simple_switch.html
@@ -4,7 +4,12 @@
         <title> Simple Switch </title>
         <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
         <meta charset="UTF-8">
+
+        <!-- Using Node.js and Browserify  -->
         <script src="../../bundle.js"> </script> 
+        
+        <!-- Using fetch -->
+        <!-- <script src = "simple_switch.js"> </script> -->
         <style>
             body {
                background: black;
@@ -59,8 +64,15 @@
         trigger a PUT request that can be found within simple_switch_h.js. -->
         <h1> Simple Switch </h1>
         <h2> xChip Status: OFF </h2> 
+
+        <!-- Using Node.js and Browserify  -->
+        <!-- <button type="button" onclick="window.switchOn()"> On </button>
+        <button type="button" onclick="window.switchOff()"> Off </button> -->
+
+        <!-- Using Fetch  -->
         <button type="button" onclick="switchOn()"> On </button>
         <button type="button" onclick="switchOff()"> Off </button>
+        
         <img src="C:\Users\Helen\Documents\GitHub\xiot_egypt\Simple On-Off Switch\Helen\xChip.png" alt="XIOT">
     </body>
 </html>
