--- a/Simple On-Off Switch/Amy/templates/SimpleONOFF.html
+++ b/Simple On-Off Switch/Amy/templates/SimpleONOFF.html
@@ -76,7 +76,7 @@
         <h2>Simple Switch</h2>
 
         <!-- creating the on/off buttons along with delaring what happens on click -->
-        <button class='on' type="button" onclick='switchon()'> ON </button>
+        <button class='on' type="button" onclick='switchOn()'> ON </button>
         <button class='off' type="button" onclick='switchoff()'> OFF </button>
         
     </body>
