--- a/Simple On-Off Switch/Helen/templates/outlet_switch.html
+++ b/Simple On-Off Switch/Helen/templates/outlet_switch.html
@@ -63,15 +63,15 @@
         <!-- A simple webpage with two buttons--on and off. When clicked, it'll
         trigger a PUT request that can be found within simple_switch_h.js. -->
         <h1 onclick = "location.href='/'"> Simple Switch </h1>
-        <h2> xChip Status: OFF </h2> 
+        <h2> Outlet Status: OFF </h2> 
 
         <!-- Using Node.js and Browserify  -->
         <!-- <button type="button" onclick="window.switchOn()"> On </button>
         <button type="button" onclick="window.switchOff()"> Off </button> -->
 
         <!-- Using Fetch  -->
-        <button type="button" onclick="location.href='/light_on'"> On </button>
-        <button type="button" onclick="location.href='/light_off'"> Off </button>
+        <button type="button" onclick="location.href='/outlet_on'"> On </button>
+        <button type="button" onclick="location.href='/outlet_off'"> Off </button>
         
         <img src="C:\Users\Helen\Documents\GitHub\xiot_egypt\Simple On-Off Switch\Helen\xChip.png" alt="XIOT">
     </body>
