--- a/Simple On-Off Switch/Amy/templates/SimpleONOFF.html
+++ b/Simple On-Off Switch/Amy/templates/SimpleONOFF.html
@@ -9,8 +9,7 @@
         <title>Simple Switch</title>
         <meta charset="UTF-8"/>
         <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
-        <script src="simpleONOFF.js"></script>
-
+        
         <!-- styling the different aspects of the webpage  -->
         <style>
             
@@ -76,8 +75,8 @@
         <h2>Simple Switch</h2>
 
         <!-- creating the on/off buttons along with delaring what happens on click -->
-        <button class='on' type="button" onclick='switchOn()'> ON </button>
-        <button class='off' type="button" onclick='switchoff()'> OFF </button>
+        <button class='on' type="button" onclick= "location.href='/lighton'"> ON </button>
+        <button class='off' type="button" onclick= "location.href='/lightoff'"> OFF </button>
         
     </body>
 
